# ImageCompress

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/marco/imagecompress/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/marco/imagecompress/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/marco/imagecompress/: ExampleUnitTest.kt
compress/: CMakeLists.txt  build.gradle
compress/src/androidTest/java/com/zhaodong/compress/: ExampleInstrumentedTest.kt
compress/src/main/: AndroidManifest.xml
compress/src/main/cpp/: CMakeLists.txt  compress.c  compress.h  native-lib.c  native-lib.cpp
compress/src/main/java/com/zhaodong/compress/: ImageCompress.kt
compress/src/test/java/com/zhaodong/compress/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
